2009-02-07  Anatoly Sokolov  <aesok@post.ru>

	* include/avr/iotnx4.h: Add RSIG bit definition.
	* include/avr/iotnx5.h: Same.

2009-02-06  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotnx4.h: Add BODS and BODSE bit definitions.
	* include/avr/iotnx5.h: Same.
	* include/avr/iomxx4.h: Define BODS and BODSE only if not ATmega644.

2009-02-06  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom1284p.h: Fix OCROA_0..OCROA_7 to OCR0A_0..OCR0A_7.
	* include/avr/iom328p.h: Same.
	* include/avr/iom168p.h: Same.
	* include/avr/iom88p.h: Same.
	* include/avr/iom48p.h: Same.
	* include/avr/iotn48.h: Same.
	* include/avr/iom32u6.h: Same.
	* include/avr/io90scr100.h: Same.
	* include/avr/iom128rfa1.h: Same.

2009-02-06  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/sleep.h: Add support for AT90PWM81.

2009-02-06  Eric B. Weddington  <eric.weddington@atmel.com>

	* xml/avrgcc-header: Add Id line. Always add *PAGE_SIZE constant
	definitions for xmega devices. Fix definition of XRAMEND constant for
	classic AVR devices.
	* include/avr/iox128a1.h: Add *PAGE_SIZE constants.
	* include/avr/iox16a4.h: Same.
	* include/avr/iox16d4.h: Same.
	* include/avr/iox32a4.h: Same.
	* include/avr/iox32d4.h: Same.
	* include/avr/iox64a1.h: Same.
	* include/avr/iox64a3.h: Same.
	* include/avr/iox128a3.h: Same.
	* include/avr/iox256a3.h: Same.
	* include/avr/iox256a3b.h: Same.

2009-02-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version date to 20090205

2009-02-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Add the ATmega128RFA1 device.
	* devtools/gen-avr-lib-tree.sh: (Ditto.)
	* include/avr/Makefile.am: (Ditto.)
	* include/avr/io.h: (Ditto.)
	* include/avr/wdt.h: (Ditto.)
	* include/avr/iom128rfa1.h: (Ditto.)

2009-02-04  Eric B. Weddington  <eric.weddington@atmel.com>

	* bootstrap: Remove autoconf and automake version checks.
	* configure.ac (AC_INIT): Make this call be first in script according
	to docs.